src/index.css
/* Fonts */
@import 'normalize.css';
@font-face {
  font-family: 'Pacifico';
  src: local('Pacifico'),
    url('assets/fonts/Pacifico-Regular.ttf') format('truetype');
  font-weight: 400;
  font-display: swap;
}

/* Global Styles */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
  /* user-select: none; */
}

body {
  font-family: 'Pacifico', system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
    sans-serif;
  color: #fff;
  background: linear-gradient(90deg, #8360c3, #2ebf91);
}

picture {
  max-width: 100%;
  height: auto;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  cursor: pointer;
  border: 0;
}

.container {
  margin: 0 auto;
  padding: 0 15px;
  max-width: 330px;
}

/* Animations */
@keyframes fade {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

